tests/fail/strict_pointer_rules.tk

shape Point(x: i32, y: i32)

fn main() -> i32 {
    unsafe {
        // FAIL 1: Implicit pointer inference
        auto p1 = new Point(x=1, y=2) 
        // EXPECT: implies pointer type '^Point' but lacks explicit sigil
        
        auto ^p2# = new Point(x=3, y=4)
        
        // FAIL 2: Dot with sigil
        (^p2).x = 10
        // EXPECT: Dot operator '.' cannot be used with explicit pointer sigil
        
        // FAIL 3: Arrow without sigil
        p2->y = 20
        // EXPECT: Arrow operator '->' requires explicit pointer sigil
    }
    return 0
}
